--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,16 +1,15 @@
-<?xml version ="1.0" encoding ="utf-8"?><!--  Learn More about how to use App Actions: https://developer.android.com/guide/actions/index.html -->
+<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/navigation_resources"
+        android:id="@+id/nav_menu_resources"
         android:icon="@drawable/ic_resources"
-        android:title="@string/navigation_resources" />
+        android:title="@string/nav_resources" />
     <item
-        android:id="@+id/navigation_gameTool"
+        android:id="@+id/nav_menu_gametool"
         android:icon="@drawable/ic_gametool"
-        android:title="@string/navigation_gameTool" />
+        android:title="@string/nav_gametool" />
     <item
-        android:id="@+id/navigation_me"
+        android:id="@+id/nav_menu_me"
         android:icon="@drawable/ic_me"
-        android:title="@string/navigation_me" />
-
+        android:title="@string/nav_me" />
 </menu>
