--- a/app/src/main/res/layout/fragment_gametool.xml
+++ b/app/src/main/res/layout/fragment_gametool.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<TextView
     android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    android:text="GameTool"></TextView>
-</LinearLayout>
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <LinearLayout
+        android:id="@+id/gameTool_linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        tools:ignore="UselessLeaf">
+    </LinearLayout>
+</ScrollView>
