--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -5,5 +5,6 @@
 <TextView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:text="Me"></TextView>
+    android:fontFamily="serif-monospace"
+    android:text="Me"/>
 </LinearLayout>
