--- a/app/src/main/res/layout/layout_resourcesview.xml
+++ b/app/src/main/res/layout/layout_resourcesview.xml
@@ -1,18 +1,16 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="400dp"
-    android:layout_height="400dp"
-    android:layout_margin="30dp"
-    android:layout_marginTop="30dp"
+    android:layout_width="wrap_content"
+    android:layout_height="@dimen/layout_height"
+    android:layout_gravity="center"
+    android:layout_margin="@dimen/layout_margin"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground"
     android:orientation="vertical"
-    android:paddingHorizontal="5dp"
-    android:paddingVertical="5dp"
+    android:padding="@dimen/padding"
     app:cardElevation="10dp"
-    android:layout_gravity="center"
     tools:ignore="UnusedAttribute">
 
     <LinearLayout
@@ -40,7 +38,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="2dp"
+                android:layout_margin="@dimen/relativeLayout_margin"
                 tools:ignore="UselessLeaf">
 
                 <TextView
@@ -50,6 +48,7 @@
                     android:layout_alignParentStart="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentTop="true"
+                    android:fontFamily="serif-monospace"
                     android:text="@string/resources_view_title" />
 
                 <TextView
@@ -57,6 +56,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
+                    android:fontFamily="serif-monospace"
                     android:text="@string/resources_view_summary" />
 
                 <Button
@@ -66,6 +66,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentBottom="true"
+                    android:fontFamily="serif-monospace"
                     android:text="@string/resources_view_more" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
