--- a/app/src/main/res/layout/layout_resourcesview.xml
+++ b/app/src/main/res/layout/layout_resourcesview.xml
@@ -48,7 +48,8 @@
                     android:layout_alignParentStart="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentTop="true"
-                    android:fontFamily="serif-monospace"
+                    android:fontFamily="monospace"
+                    android:textSize="@dimen/font_size"
                     android:text="@string/resources_view_title" />
 
                 <TextView
@@ -56,17 +57,21 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:fontFamily="serif-monospace"
+                    android:fontFamily="monospace"
+                    android:textSize="@dimen/font_size"
                     android:text="@string/resources_view_summary" />
 
                 <Button
-                    style="@style/Base.Widget.AppCompat.Button.Colored"
+                    style="@style/Widget.AppCompat.Button.Colored"
+
+                    android:shadowColor="@color/colorPrimary"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentBottom="true"
-                    android:fontFamily="serif-monospace"
+                    android:fontFamily="monospace"
+                    android:textSize="@dimen/font_size"
                     android:text="@string/resources_view_more" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
