--- a/app/src/main/res/values-sw1024dp/dimens.xml
+++ b/app/src/main/res/values-sw1024dp/dimens.xml
@@ -4,5 +4,6 @@
 	<dimen name="padding">14.2222dp</dimen>
 	<dimen name="layout_margin">85.3333dp</dimen>
 	<dimen name="relativeLayout_margin">5.6889dp</dimen>
-	<dimen name="font_weight">400</dimen>
+	<dimen name="font_size">28.4444sp</dimen>
+	<dimen name="elevation">142.2222dp</dimen>
 </resources>
