--- a/app/src/main/res/values-sw1365dp/dimens.xml
+++ b/app/src/main/res/values-sw1365dp/dimens.xml
@@ -4,5 +4,6 @@
 	<dimen name="padding">18.9583dp</dimen>
 	<dimen name="layout_margin">113.7500dp</dimen>
 	<dimen name="relativeLayout_margin">7.5833dp</dimen>
-	<dimen name="font_weight">400</dimen>
+	<dimen name="font_size">37.9167sp</dimen>
+	<dimen name="elevation">189.5833dp</dimen>
 </resources>
