--- a/app/src/main/res/values-sw392dp/dimens.xml
+++ b/app/src/main/res/values-sw392dp/dimens.xml
@@ -4,5 +4,6 @@
 	<dimen name="padding">5.4444dp</dimen>
 	<dimen name="layout_margin">32.6667dp</dimen>
 	<dimen name="relativeLayout_margin">2.1778dp</dimen>
-	<dimen name="font_weight">400</dimen>
+	<dimen name="font_size">10.8889sp</dimen>
+	<dimen name="elevation">54.4444dp</dimen>
 </resources>
