--- a/app/src/main/res/values-sw400dp/dimens.xml
+++ b/app/src/main/res/values-sw400dp/dimens.xml
@@ -4,5 +4,6 @@
 	<dimen name="padding">5.5556dp</dimen>
 	<dimen name="layout_margin">33.3333dp</dimen>
 	<dimen name="relativeLayout_margin">2.2222dp</dimen>
-	<dimen name="font_weight">400</dimen>
+	<dimen name="font_size">11.1111sp</dimen>
+	<dimen name="elevation">55.5556dp</dimen>
 </resources>
