--- a/app/src/main/res/values-sw410dp/dimens.xml
+++ b/app/src/main/res/values-sw410dp/dimens.xml
@@ -4,5 +4,6 @@
 	<dimen name="padding">5.6944dp</dimen>
 	<dimen name="layout_margin">34.1667dp</dimen>
 	<dimen name="relativeLayout_margin">2.2778dp</dimen>
-	<dimen name="font_weight">400</dimen>
+	<dimen name="font_size">11.3889sp</dimen>
+	<dimen name="elevation">56.9444dp</dimen>
 </resources>
