--- a/app/src/main/res/values-sw411dp/dimens.xml
+++ b/app/src/main/res/values-sw411dp/dimens.xml
@@ -4,5 +4,6 @@
 	<dimen name="padding">5.7083dp</dimen>
 	<dimen name="layout_margin">34.2500dp</dimen>
 	<dimen name="relativeLayout_margin">2.2833dp</dimen>
-	<dimen name="font_weight">400</dimen>
+	<dimen name="font_size">11.4167sp</dimen>
+	<dimen name="elevation">57.0833dp</dimen>
 </resources>
