--- a/app/src/main/res/values-sw432dp/dimens.xml
+++ b/app/src/main/res/values-sw432dp/dimens.xml
@@ -4,5 +4,6 @@
 	<dimen name="padding">6.0000dp</dimen>
 	<dimen name="layout_margin">36.0000dp</dimen>
 	<dimen name="relativeLayout_margin">2.4000dp</dimen>
-	<dimen name="font_weight">400</dimen>
+	<dimen name="font_size">12.0000sp</dimen>
+	<dimen name="elevation">60.0000dp</dimen>
 </resources>
