--- a/app/src/main/res/values-sw480dp/dimens.xml
+++ b/app/src/main/res/values-sw480dp/dimens.xml
@@ -4,5 +4,6 @@
 	<dimen name="padding">6.6667dp</dimen>
 	<dimen name="layout_margin">40.0000dp</dimen>
 	<dimen name="relativeLayout_margin">2.6667dp</dimen>
-	<dimen name="font_weight">400</dimen>
+	<dimen name="font_size">13.3333sp</dimen>
+	<dimen name="elevation">66.6667dp</dimen>
 </resources>
