--- a/app/src/main/res/values-sw533dp/dimens.xml
+++ b/app/src/main/res/values-sw533dp/dimens.xml
@@ -4,5 +4,6 @@
 	<dimen name="padding">7.4028dp</dimen>
 	<dimen name="layout_margin">44.4167dp</dimen>
 	<dimen name="relativeLayout_margin">2.9611dp</dimen>
-	<dimen name="font_weight">400</dimen>
+	<dimen name="font_size">14.8056sp</dimen>
+	<dimen name="elevation">74.0278dp</dimen>
 </resources>
