--- a/app/src/main/res/values-sw592dp/dimens.xml
+++ b/app/src/main/res/values-sw592dp/dimens.xml
@@ -4,5 +4,6 @@
 	<dimen name="padding">8.2222dp</dimen>
 	<dimen name="layout_margin">49.3333dp</dimen>
 	<dimen name="relativeLayout_margin">3.2889dp</dimen>
-	<dimen name="font_weight">400</dimen>
+	<dimen name="font_size">16.4444sp</dimen>
+	<dimen name="elevation">82.2222dp</dimen>
 </resources>
