--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -4,5 +4,6 @@
 	<dimen name="padding">8.3333dp</dimen>
 	<dimen name="layout_margin">50.0000dp</dimen>
 	<dimen name="relativeLayout_margin">3.3333dp</dimen>
-	<dimen name="font_weight">400</dimen>
+	<dimen name="font_size">16.6667sp</dimen>
+	<dimen name="elevation">83.3333dp</dimen>
 </resources>
