--- a/app/src/main/res/values-sw640dp/dimens.xml
+++ b/app/src/main/res/values-sw640dp/dimens.xml
@@ -4,5 +4,6 @@
 	<dimen name="padding">8.8889dp</dimen>
 	<dimen name="layout_margin">53.3333dp</dimen>
 	<dimen name="relativeLayout_margin">3.5556dp</dimen>
-	<dimen name="font_weight">400</dimen>
+	<dimen name="font_size">17.7778sp</dimen>
+	<dimen name="elevation">88.8889dp</dimen>
 </resources>
