--- a/app/src/main/res/values-sw662dp/dimens.xml
+++ b/app/src/main/res/values-sw662dp/dimens.xml
@@ -4,5 +4,6 @@
 	<dimen name="padding">9.1944dp</dimen>
 	<dimen name="layout_margin">55.1667dp</dimen>
 	<dimen name="relativeLayout_margin">3.6778dp</dimen>
-	<dimen name="font_weight">400</dimen>
+	<dimen name="font_size">18.3889sp</dimen>
+	<dimen name="elevation">91.9444dp</dimen>
 </resources>
