--- a/app/src/main/res/values-sw720dp/dimens.xml
+++ b/app/src/main/res/values-sw720dp/dimens.xml
@@ -4,5 +4,6 @@
 	<dimen name="padding">10.0000dp</dimen>
 	<dimen name="layout_margin">60.0000dp</dimen>
 	<dimen name="relativeLayout_margin">4.0000dp</dimen>
-	<dimen name="font_weight">400</dimen>
+	<dimen name="font_size">20.0000sp</dimen>
+	<dimen name="elevation">100.0000dp</dimen>
 </resources>
