--- a/app/src/main/res/values-sw800dp/dimens.xml
+++ b/app/src/main/res/values-sw800dp/dimens.xml
@@ -4,5 +4,6 @@
 	<dimen name="padding">11.1111dp</dimen>
 	<dimen name="layout_margin">66.6667dp</dimen>
 	<dimen name="relativeLayout_margin">4.4444dp</dimen>
-	<dimen name="font_weight">400</dimen>
+	<dimen name="font_size">22.2222sp</dimen>
+	<dimen name="elevation">111.1111dp</dimen>
 </resources>
