--- a/app/src/main/res/values-sw811dp/dimens.xml
+++ b/app/src/main/res/values-sw811dp/dimens.xml
@@ -4,5 +4,6 @@
 	<dimen name="padding">11.2639dp</dimen>
 	<dimen name="layout_margin">67.5833dp</dimen>
 	<dimen name="relativeLayout_margin">4.5056dp</dimen>
-	<dimen name="font_weight">400</dimen>
+	<dimen name="font_size">22.5278sp</dimen>
+	<dimen name="elevation">112.6389dp</dimen>
 </resources>
