--- a/app/src/main/res/values-sw820dp/dimens.xml
+++ b/app/src/main/res/values-sw820dp/dimens.xml
@@ -4,5 +4,6 @@
 	<dimen name="padding">11.3889dp</dimen>
 	<dimen name="layout_margin">68.3333dp</dimen>
 	<dimen name="relativeLayout_margin">4.5556dp</dimen>
-	<dimen name="font_weight">400</dimen>
+	<dimen name="font_size">22.7778sp</dimen>
+	<dimen name="elevation">113.8889dp</dimen>
 </resources>
