--- a/app/src/main/res/values-sw960dp/dimens.xml
+++ b/app/src/main/res/values-sw960dp/dimens.xml
@@ -4,5 +4,6 @@
 	<dimen name="padding">13.3333dp</dimen>
 	<dimen name="layout_margin">80.0000dp</dimen>
 	<dimen name="relativeLayout_margin">5.3333dp</dimen>
-	<dimen name="font_weight">400</dimen>
+	<dimen name="font_size">26.6667sp</dimen>
+	<dimen name="elevation">133.3333dp</dimen>
 </resources>
