--- a/app/src/main/res/values-sw961dp/dimens.xml
+++ b/app/src/main/res/values-sw961dp/dimens.xml
@@ -4,5 +4,6 @@
 	<dimen name="padding">13.3472dp</dimen>
 	<dimen name="layout_margin">80.0833dp</dimen>
 	<dimen name="relativeLayout_margin">5.3389dp</dimen>
-	<dimen name="font_weight">400</dimen>
+	<dimen name="font_size">26.6944sp</dimen>
+	<dimen name="elevation">133.4722dp</dimen>
 </resources>
