--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,5 +4,6 @@
     <dimen name="padding">5dp</dimen>
     <dimen name="layout_margin">30dp</dimen>
     <dimen name="relativeLayout_margin">2dp</dimen>
-    <dimen name="font_weight">400</dimen>
+    <dimen name="font_size">10sp</dimen>
+    <dimen name="elevation">50dp</dimen>
 </resources>
